fixed spacing maybe

--- a/src/pages/main/index.css
+++ b/src/pages/main/index.css
@@ -316,6 +316,10 @@ h2 {
     justify-content: end;
 }
 
+.mobile-spacing {
+    letter-spacing: 1px !important;
+}
+
 @media screen and (max-width: 1000px) {
 
     .card-modal {
